# danwa-core

./: .danwa-config  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  INSTALL.md  Makefile  README.md  docker-compose.yml  manage.sh  pyproject.toml  setup.sh  version
backend/: __init__.py  main.py
backend/a2a/: __init__.py  adapter.py  agent_card.py  client.py  config.py  exceptions.py  node.py  payload_translator.py  router.py  schemas.py  server.py  task_manager.py  url_validator.py
backend/api/: deps.py  errors.py  events.py  quota.py  rate_limit.py
backend/blueprints/: __init__.py  bundle_io.py  canvas_to_workflow.py  compiler.py  composer.py  migrations.py  models.py  module_lookups.py  mvp_debate_canvas.py  repo_base.py  repo_blueprints.py  repo_misc.py  repo_profiles.py  repo_workflows.py  repository.py  resolver.py  workflow_models.py
backend/core/: __init__.py  config.py  debate_engine.py  llm_id_aliases.py  llm_router.py  logging.py  memory.py  privacy.py  profiles.py  prompt_manager.py  security.py  seed.py  session_db.py  trace_logger.py  trace_logging.py
backend/llm_catalog/: __init__.py  fetcher.py  id_strategy.py  import_engine.py  normalize.py  sources.py
backend/migrations/: migrate_projects.py  v001_multi_tenant.py  v002_case_pfade.py  v003_graph_edge_cache.py  v024_rag_project_id_dedup.py
backend/models/: __init__.py  artifact.py  case.py  debate_input.py  input_job.py  membership.py  optimization_proposal.py  project.py  render_job.py  schemas.py  tag.py  tenant.py  transactional.py  user.py
backend/modules/: __init__.py  dependency_resolver.py  installer.py  models.py  publisher.py  service.py  type_derivation.py  validation.py
backend/persistence/: audit.py  backup.py  case_store.py  debate_store.py  membership_store.py  project_store.py  tag_store.py  tenant_store.py  user_key_store.py  user_store.py
backend/repositories/: profile_repo.py  proposal_repo.py
backend/services/: artifact_store.py  (+20 more)
config/: settings.yaml
data/: a2a_tasks.db  audit.db  auth.db
deploy/: .env.example  nginx.conf  prometheus.yml
docs/: api-reference.json
modules/: .uuid_migration_map.json
scripts/: cleanup.sh  cleanup_legacy.py  deploy_import.py  doc_update.py  export_openapi.py  export_to_repo.py  export_translations_to_modules.py  fix_svelte.py  generate_kitsune_knowledge.py  import_from_repo.py  llm_id_mapping.json  manage.sh  migrate_agents.py  migrate_legacy_debates.py  migrate_llm_ids_to_uuid.py  migrate_llm_profiles.py  migrate_module_uuids.py  migrate_modules.py  migrate_projects_to_wetena.py  migrate_prompts.py  migrate_templates.py  migrate_variants.py  seed_templates.py  seed_tone_profiles.py  seed_transactional_roles.py  setup_dms.sh  setup_searxng.sh  stamp_version.py  start.sh  status.sh  stop.sh  sync_version.py
templates/: _macros.html  dialectic_debate.json  five_phase_debate.json  interview_workflow.json  kantian_analysis.json  mediation_workflow.json  minimal.html  quick_review.json  standard_debate.json  streitgespraech_workflow.json  transactional_drafting.json
tests/: MIGRATION_NOTES.md
(+1041 files in other folders)
