[project]
name = "debate-agent"
version = "1.1.0"
description = "Auditierbarer Multi-Agenten-Debatten-Workflow"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "ddgs>=8.0.0",
    "pdfplumber>=0.10.0",
    "pypdf>=4.0.0",
    "odfpy>=1.4.1",
    "python-docx>=1.1.0",
    "chromadb>=0.5.0",
    "weasyprint>=61.0",
    "markdown>=3.5",
    "tiktoken>=0.7.0",
    "rank_bm25>=0.2.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "langgraph>=0.2.0",
    "edge-tts>=6.1.0",
    "pyttsx3>=2.90",
    "pypandoc>=1.13",
    "pytesseract>=0.3.13",
    "easyocr>=1.7",
    "langchain-core>=0.3.0",
    "jinja2>=3.1.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.2.0",
    "gunicorn>=22.0.0",
    "structlog>=24.1.0",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "packaging>=23.0",
    "html2text>=2025.4.15",
]

# PEP 735 dependency-groups replace the legacy [tool.uv] dev-dependencies
# table.  ``uv pip install --group dev`` reads this list; ``[test]`` in
# project.optional-dependencies is still used by the existing
# ``uv pip install -e ".[test]"`` line in CI.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27.0",
    "pdoc>=16.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/backend"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=backend.core",
    "--cov=backend.models",
    "--cov=backend.modules",
    "--cov=backend.llm_catalog",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--no-cov-on-fail",
]

[tool.coverage.run]
branch = true
source = [
    "backend.core",
    "backend.models",
    "backend.modules",
    "backend.llm_catalog",
]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
fail_under = 60

[tool.ruff]
line-length = 150
exclude = ["archive/", "src/", "tests/test_*.py"]

[tool.ruff.lint.per-file-ignores]
"backend/blueprints/migrations.py" = ["E501"]
"backend/services/debate_workflow.py" = ["E501"]
"tests/backend/test_migration_v7.py" = ["E501"]
"backend/workflow/domains.py" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.4"]
dms = ["paddlepaddle>=3.0,<3.3.0", "paddleocr>=3.5.0"]
redis = ["redis>=5.0.0", "celery[redis]>=5.4.0"]
